addressed feedback from @leem44

--- a/12-version_control.Rmd
+++ b/12-version_control.Rmd
@@ -42,15 +42,27 @@ collaboration, specifically to:
 
 ## What is version control, and why should I use it?
 
+Version control is system which records changes to a document, 
+or set of documents, throughout the history of their development. 
+Most version control systems have features that allow users to easily
+view and retrieve past versions of the documents. 
+Version control is most commonly used in software development, 
+but can be used for any electronic files for any type of project, 
+including data analyses.
+
 Data analysis projects often require iteration 
 and revision to move from an initial idea to a finished product
 ready for the intended audience. 
 Without deliberate and conscious effort towards tracking changes 
-made to the analysis, projects tend to become messy. This mess can include 
-mystery results files that cannot be reproduced,
-temporary files with snippets of ideas, 
-mind-boggling filenames like `document_final_draft_v5_final.txt`,
-large blocks of commented code "saved for later," and more. 
+made to the analysis, projects tend to become messy. 
+This mess can have serious, negative repercussions on an analysis project, 
+which can include interesting results files that your code cannot reproduce,
+temporary files with snippets of ideas that become forgotten about 
+and are not easy to find, 
+mind-boggling filenames that make it unclear 
+which is the current working version of the file 
+(e.g., `document_final_draft_final.txt`, `golden_master_final.txt`, 
+`to_hand_in_final.txt`, etc), and more. 
 Additionally, the iterative nature of data analysis projects 
 makes it important to be able to examine earlier versions of code and writing. 
 Finally, data analyses are typically completed by a team of people 
@@ -85,25 +97,19 @@ The repository hosting service is responsible for storing a copy
 of the version-controlled project online (a *repository*), 
 where you and your collaborators can access it remotely, 
 discuss issues and bugs, and distribute your final product. 
-For both of these items, there is a wide variety of choices; 
-some of the more popular ones are:
-
-- **Version control systems:**
-    - [Git](https://git-scm.com) 
-    - [Mercurial](https://mercurial-scm.org)
-    - [Subversion](https://subversion.apache.org)
-- **Repository hosting services:**
-    - [GitHub](https://github.com)
-    - [GitLab](https://gitlab.com)
-    - [BitBucket](https://bitbucket.org)
-
+For both of these items, there is a wide variety of choices.
 In this textbook we'll use Git for version control, 
 and GitHub for repository hosting, 
 because both are currently the most widely-used platforms.
+In the 
+[additional resources section at the end of the chapter](\@ref(vc-add-res)) 
+we list many of the common version control systems 
+and repository hosting services in use today.
 
 > **Note:** technically you don't *have to* use a repository hosting service. 
-> You can, for example, use Git to version control a project
-> that is stored only in a folder on your computer. 
+> You can, for example, version control a project
+> that is stored only in a folder on your computer - 
+> never sharing it on a repository hosting service. 
 > But using a repository hosting service provides a few big benefits, 
 > including managing collaborator access permissions,
 > tools to discuss and track bugs, 
@@ -427,18 +433,26 @@ wouldn't be very useful if you're trying to see the history of changes to a
 single code file in your project!
 
 
-## Cloning your repository on JupyterHub
+## Cloning your repository using Jupyter
 
 Although there are several ways to create and edit files on 
 GitHub, they are not quite powerful enough for 
 efficiently creating and editing complex files, or files that need to be 
-executed to assess whether they work (e.g., files containing code). Thus, it is 
-useful to be able to connect the project repository that was created on 
-GitHub to a coding environment. This can be done on 
-your local computer, or using a JupyterHub; below we show how to do this using a 
-JupyterHub.
+executed to assess whether they work (e.g., files containing code). 
+For example, 
+you wouldn't be able to run analysis written with R code directly on GitHub.
+Thus, it is useful to be able to connect the project repository 
+that was created on GitHub to a coding environment. 
+This can be done using the Git. 
+Git can be run via several different ways, 
+below we show how to do this using the Jupyter Git extension.
+The Jupyter Git extension can be run via Jupyter on your local computer, 
+or on a JupyterHub server. 
+*Note: we recommend reading Chapter \@ref(getting-started-with-jupyter)* 
+*to learn how to use Jupyter before reading this chapter.*
 
-We need to *clone* our project's Git repository to our JupyterHub---i.e., make a 
+We need to *clone* our project's Git repository to our local computer 
+or JupyterHub server---i.e., make a 
 copy that knows where it was obtained from so that it knows where send/receive 
 new committed edits. In order to do this, first copy the URL from the HTTPS tab 
 of the Code drop down menu on GitHub (Figure \@ref(fig:clone-02)).
@@ -806,16 +820,31 @@ image_read("img/version_control/issue_06.png") %>%
   image_crop("3584x1900")
 ```
 
-## Additional resources
+## Additional resources {#vc-add-res}
 
 Now that you've picked up the basics of version control with Git and GitHub, you can expand your knowledge using 
 one of the many tutorials available online:
 
 ### Best practices and workflows
-- [Good enough practices in scientific computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510#sec014) [-@wilson2014best]  by Greg Wilson, Jennifer Bryan, Karen Cranston, Justin Kitzes, Lex Nederbragt & Tracy K. Teal
-- [Configuration Management for Large-Scale Scientific Computing at the UK Met Office](https://ieeexplore.ieee.org/iel5/5992/4653193/04653206.pdf?casa_token=6gY_5D7UbE4AAAAA:Z7BBJHplUfZEq31EfOpF_iP1qUQJwn170LdU8-ZUTtCu1N-ZpXYMV6yZHqIcSuRHLNVSkjM) [-@matthews2008configuration] by David Mathews, Greg Wilson & Steve Easterbrook
+- [Good enough practices in scientific computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510#sec014) [-@wilson2014best]  by Greg Wilson, Jennifer Bryan, Karen Cranston, Justin Kitzes, Lex Nederbragt & Tracy K. Teal advises and elaborates further on useful workflows and good enough practices to version control data analysis projects.
 
+### List of common version control systems and repository hosting services
+Below we list and link out to the most commonly used version control systems 
+and repository hosting services:
+
+- **Version control systems:**
+    - [Git](https://git-scm.com) 
+    - [Mercurial](https://mercurial-scm.org)
+    - [Subversion](https://subversion.apache.org)
+- **Repository hosting services:**
+    - [GitHub](https://github.com)
+    - [GitLab](https://gitlab.com)
+    - [BitBucket](https://bitbucket.org)
+    
 ### Technical references
+Below we link to additional tutorials 
+and guides for three common repository hosting services:
+
 - GitHub's [guides website](https://guides.github.com/)
 - GitHub's [YouTube channel](https://www.youtube.com/githubguides)
 - BitBucket's [tutorials](https://www.atlassian.com/git/tutorials/what-is-version-control)
