--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -2,11 +2,11 @@
 
 ## Overview 
 Up until this point, we have solved all of our predictive problems---both classification
-and regression---using K-nearest neighbours (K-NN)-based approaches. But while K-NN methods are 
+and regression---using K-nearest neighbours (KNN)-based approaches. But while KNN methods are 
 simple and flexible, in the context of regression, there is another method (generally more popular in
 most scientific disciplines) known as *linear regression*. This chapter provides an introduction
 to the basic concept of linear regression, shows how to use `tidymodels` to perform linear regression in R,
-and characterizes its strengths and weaknesses compared to K-NN regression. The focus is, as usual,
+and characterizes its strengths and weaknesses compared to KNN regression. The focus is, as usual,
 on the case where there is a single predictor and single response variable of interest; but the chapter
 concludes with an example using *multivariate linear regression* when there is more than one
 predictor.
@@ -21,18 +21,18 @@ By the end of the chapter, students will be able to:
 
 ## Simple linear regression
 
-At the end of the previous chapter, we noted some limitations of K-NN regression.
-While the method is simple and easy to understand, K-NN regression does not
+At the end of the previous chapter, we noted some limitations of KNN regression.
+While the method is simple and easy to understand, KNN regression does not
 predict well beyond the range of the predictors in the training data, and
 the method gets significantly slower as the training dataset grows.
-Fortunately, there is an alternative to K-NN regression---*linear regression*---that addresses
+Fortunately, there is an alternative to KNN regression---*linear regression*---that addresses
 both of these limitations. Linear regression is also much more commonly used in practice, especially
 in scientific applications. In this first part of the chapter, we will focus on *simple* linear regression,
 which involves only one predictor variable and one response variable; later on, we will consider
 *multivariate* linear regression, which involves multiple predictor variables.
-Like K-NN regression, simple linear regression involves
+Like KNN regression, simple linear regression involves
 predicting a numerical response variable (like race time, house price, or height);
-but *how* it makes those predictions for a new observation is quite different from K-NN regression.
+but *how* it makes those predictions for a new observation is quite different from KNN regression.
  Instead of looking at the K nearest neighbours and averaging
 over their values for a prediction, in simple linear regression, all the
 training data points are used to create a straight line of best fit, and then
@@ -43,13 +43,13 @@ the line is used to "look up" the prediction.
 > regression* (it is used for classification even though the name, somewhat confusingly,
 > has the word "regression" in it). In logistic regression---similar to linear regression---you
 > "fit" the model to the training data and then "look up" the prediction for each new observation.
-> Logistic regression and K-NN classification have an advantage/disadvantage comparison 
-> similar to that of linear regression and K-NN
+> Logistic regression and KNN classification have an advantage/disadvantage comparison 
+> similar to that of linear regression and KNN
 > regression. See the "Additional Resources" section at the end of the
 > classification chapters to learn more about logistic regression.
 
 Let's return to the Sacramento housing data from the previous chapter to learn
-how to apply linear regression and compare it to K-NN regression. For now, we
+how to apply linear regression and compare it to KNN regression. For now, we
 will consider 
 a smaller version of the housing data to help make our visualizations clear.
 Recall our predictive question: can we use the size of a house in the Sacramento, CA area to predict
@@ -141,7 +141,7 @@ the line that minimizes the **average squared vertical distance** between itself
 each of the observed data points in the training data. Figure \@ref(fig:08-verticalDistToMin) illustrates 
 these vertical distances as red lines. Finally, to assess the predictive 
 accuracy of a simple linear regression model,
-we use RMSPE&mdash;the same measure of predictive performance we used with K-NN regression.
+we use RMSPE&mdash;the same measure of predictive performance we used with KNN regression.
 
 ```{r 08-verticalDistToMin,  echo = FALSE, message = FALSE, warning = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of sale price versus size with red lines denoting the vertical distances between the predicted values and the observed data points"}
 small_sacramento <- small_sacramento %>%
@@ -154,7 +154,7 @@ small_plot +
 ## Linear regression in R
 
 We can perform simple linear regression in R using `tidymodels` in a
-very similar manner to how we performed K-NN regression. 
+very similar manner to how we performed KNN regression. 
 To do this, instead of creating a `nearest_neighbor` model specification with
 the `kknn` engine, we use a `linear_reg` model specification
 with the `lm` engine. Another difference is that we do not need to choose $K$ in the
@@ -250,16 +250,16 @@ coeffs <- tidy(pull_workflow_fit(lm_fit))
 coeffs
 ```
 
-## Comparing simple linear and K-NN regression
+## Comparing simple linear and KNN regression
 
-Now that we have a general understanding of both simple linear and K-NN
+Now that we have a general understanding of both simple linear and KNN
 regression, we can start to compare and contrast these methods as well as the
 predictions made by them. To start, let's look at the visualization of the
 simple linear regression model predictions for the Sacramento real estate data
-(predicting price from house size) and the "best" K-NN regression model
+(predicting price from house size) and the "best" KNN regression model
 obtained from the same problem, shown in Figure \@ref(fig:08-compareRegression).
 
-```{r 08-compareRegression, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 10, fig.cap = "Comparison of simple linear regression and K-NN regression"}
+```{r 08-compareRegression, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 10, fig.cap = "Comparison of simple linear regression and KNN regression"}
 set.seed(1234)
 sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 30) %>%
   set_engine("kknn") %>%
@@ -302,7 +302,7 @@ knn_plot_final <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
   geom_line(data = sacr_preds, aes(x = sqft, y = .pred), color = "blue") +
-  ggtitle("K-NN regression") +
+  ggtitle("KNN regression") +
   annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", sacr_rmspe))
 
 lm_rmspe <- lm_test_results %>%
@@ -319,14 +319,14 @@ grid.arrange(lm_plot_final, knn_plot_final, ncol = 2)
 
 What differences do we observe in Figure \@ref(fig:08-compareRegression)? One obvious
 difference is the shape of the blue lines. In simple linear regression we are
-restricted to a straight line, whereas in K-NN regression our line is much more
+restricted to a straight line, whereas in KNN regression our line is much more
 flexible and can be quite wiggly. But there is a major interpretability advantage in limiting the
 model to a straight line. A 
 straight line can be defined by two numbers, the
 vertical intercept and the slope. The intercept tells us what the prediction is when
 all of the predictors are equal to 0; and the slope tells us what unit increase in the target/response
 variable we predict given a unit increase in the predictor/explanatory
-variable. K-NN regression, as simple as it is to implement and understand, has no such
+variable. KNN regression, as simple as it is to implement and understand, has no such
 interpretability from its wiggly line. 
 
 There can however also be a disadvantage to using a simple linear regression
@@ -337,41 +337,41 @@ will underfit (have high bias), meaning that model/predicted values does not
 match the actual observed values very well. Such a model would probably have a
 quite high RMSE when assessing model goodness of fit on the training data and
 a quite high RMPSE when assessing model prediction quality on a test data
-set. On such a data set, K-NN regression may fare better. Additionally, there
+set. On such a data set, KNN regression may fare better. Additionally, there
 are other types of regression you can learn about in future courses that may do
 even better at predicting with such data.
 
 How do these two models compare on the Sacramento house prices data set? In
 Figure \@ref(fig:08-compareRegression), we also printed the RMPSE as calculated from 
 predicting on the test data set that was not used to train/fit the models. The RMPSE for the simple linear
-regression model is slightly lower than the RMPSE for the K-NN regression model.
+regression model is slightly lower than the RMPSE for the KNN regression model.
 Considering that the simple linear regression model is also more interpretable,
 if we were comparing these in practice we would likely choose to use the simple
 linear regression model.
 
-Finally, note that the K-NN regression model becomes "flat"
+Finally, note that the KNN regression model becomes "flat"
 at the left and right boundaries of the data, while the linear model
 predicts a constant slope. Predicting outside the range of the observed
-data is known as *extrapolation*; K-NN and linear models behave quite differently
+data is known as *extrapolation*; KNN and linear models behave quite differently
 when extrapolating. Depending on the application, the flat
 or constant slope trend may make more sense. For example, if our housing
 data were slightly different, the linear model may have actually predicted 
 a *negative* price for a small houses (if the intercept $\beta_0$ was negative),
 which obviously does not match reality. On the other hand, the trend of increasing
 house size corresponding to increasing house price probably continues for large houses, 
-so the "flat" extrapolation of K-NN likely does not match reality. 
+so the "flat" extrapolation of KNN likely does not match reality. 
 
 ## Multivariate linear regression
 
-As in K-NN classification and K-NN regression, we can move beyond the simple
+As in KNN classification and KNN regression, we can move beyond the simple
 case of only one predictor to the case with multiple predictors,
 known as *multivariate linear regression*. 
 To do this, we follow a very similar approach to what we did for
-K-NN regression: we just add more predictors to the model formula in the 
+KNN regression: we just add more predictors to the model formula in the 
 recipe. But recall that we do not need to use cross-validation to choose any parameters,
 nor do we need to standardize (i.e., center and scale) the data for linear regression. 
 Note once again that we have the same concerns regarding multiple predictors
-as in the settings of multivariate K-NN regression and classification: more predictors is **not** always
+as in the settings of multivariate KNN regression and classification: more predictors is **not** always
 better. But because the same predictor selection 
 algorithm from the classification chapter extends to the setting of linear regression,
 it will not be covered again in this chapter.
@@ -442,7 +442,7 @@ plot_ly() %>%
 ```
 We see that the predictions from linear regression with two predictors form a
 flat plane. This is the hallmark of linear regression, and differs from the 
-wiggly, flexible surface we get from other methods such as K-NN regression. 
+wiggly, flexible surface we get from other methods such as KNN regression. 
  As discussed this can be advantageous in one aspect, which is that for each
 predictor, we can get slopes/intercept from linear regression, and thus describe the
 plane mathematically. We can extract those slope values from our model object
@@ -470,15 +470,15 @@ bedsc <- format(round(coeffs %>% filter(term == "beds") %>% pull(estimate)), sci
 
 $$\text{house sale price} = `r icept` + `r sqftc`\cdot (\text{house size})  `r bedsc` \cdot (\text{number of bedrooms})$$
 
-This model is more interpretable than the multivariate K-NN
+This model is more interpretable than the multivariate KNN
 regression model; we can write a mathematical equation that explains how
 each predictor is affecting the predictions. But as always, we should 
 question how well multivariate linear regression is doing compared to
 the other tools we have, such as simple linear regression 
-and multivariate K-NN regression. If this comparison is part of 
+and multivariate KNN regression. If this comparison is part of 
 the model tuning process&mdash;for example, if we are trying
 out many different sets of predictors for multivariate linear
-and K-NN regression&mdash;we must perform this comparison using
+and KNN regression&mdash;we must perform this comparison using
 cross-validation on only our training data. But if we have already
 decided on a small number (e.g., 2 or 3) of tuned candidate models and
 we want to make a final comparison, we can do so by comparing the prediction
@@ -490,7 +490,7 @@ lm_mult_test_results
 
 We obtain an RMSPE for the multivariate linear regression model 
 of `r format(lm_mult_test_results %>% filter(.metric == 'rmse') %>% pull(.estimate), big.mark=",", nsmall=0, scientific = FALSE)`. This prediction error
-is less than the prediction error for the multivariate K-NN regression model,
+is less than the prediction error for the multivariate KNN regression model,
 indicating that we should likely choose linear regression for predictions of
 house sale price on this data set. Revisiting the simple linear regression model
 with only a single predictor from earlier in this chapter, we see that the RMSPE for that model was 
@@ -727,4 +727,4 @@ that will serve you well when moving to more advanced books on the topic.
 ## Additional resources
 - The [`tidymodels` website](https://tidymodels.org/packages) is an excellent reference for more details on, and advanced usage of, the functions and packages in the past two chapters. Aside from that, it also has a [nice beginner's tutorial](https://www.tidymodels.org/start/) and [an extensive list of more advanced examples](https://www.tidymodels.org/learn/) that you can use to continue learning beyond the scope of this book. 
 - [Modern Dive](https://moderndive.com/) is another textbook that uses the `tidyverse` / `tidymodels` framework. Chapter 6 complements the material in the current chapter well; it covers some slightly more advanced concepts than we do without getting mathematical. Give this chapter a read before moving on to the next reference. It is also worth noting that this book takes a more "explanatory" / "inferential" approach to regression in general (in Chapters 5, 6, and 10), which provides a nice complement to the predictive tack we take in the present book.
-- [An Introduction to Statistical Learning](https://www.statlearning.com/) [-@james2013introduction] provides a great next stop in the process of learning about regression. Chapter 3 covers linear regression at a slightly more mathematical level than we do here, but it is not too large a leap and so should provide a good stepping stone. Chapter 6 discusses how to pick a subset of "informative" predictors when you have a data set with many predictors, and you expect only a few of them to be relevant. Chapter 7 covers regression models that are more flexible than linear regression models but still enjoy the computational efficiency of linear regression. In contrast, the K-NN methods we covered earlier are indeed more flexible but become very slow when given lots of data.
+- [An Introduction to Statistical Learning](https://www.statlearning.com/) [-@james2013introduction] provides a great next stop in the process of learning about regression. Chapter 3 covers linear regression at a slightly more mathematical level than we do here, but it is not too large a leap and so should provide a good stepping stone. Chapter 6 discusses how to pick a subset of "informative" predictors when you have a data set with many predictors, and you expect only a few of them to be relevant. Chapter 7 covers regression models that are more flexible than linear regression models but still enjoy the computational efficiency of linear regression. In contrast, the KNN methods we covered earlier are indeed more flexible but become very slow when given lots of data.
